Configure for DigitalOcean deployment

--- a/IESA_ROOT/blog/templates/blog/event_detail.html
+++ b/IESA_ROOT/blog/templates/blog/event_detail.html
@@ -1,7 +1,20 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}{{ event.title }} | Events | IESA_ROOT{% endblock %}
+{% block title %}{{ event.title }} | Events | IESA{% endblock %}
+
+{% block meta_description %}{{ event.description|striptags|truncatewords:30 }}{% endblock %}
+{% block meta_keywords %}{{ event.title }}, IESA, события, мероприятия{% endblock %}
+
+{% block og_type %}article{% endblock %}
+{% block og_title %}{{ event.title }}{% endblock %}
+{% block og_description %}{{ event.description|striptags|truncatewords:30 }}{% endblock %}
+{% block og_image %}{% if event.image %}{{ request.scheme }}://{{ request.get_host }}{{ event.image.url }}{% else %}{{ request.scheme }}://{{ request.get_host }}{% static 'img/og-default.jpg' %}{% endif %}{% endblock %}
+
+{% block twitter_card %}summary_large_image{% endblock %}
+{% block twitter_title %}{{ event.title }}{% endblock %}
+{% block twitter_description %}{{ event.description|striptags|truncatewords:30 }}{% endblock %}
+{% block twitter_image %}{% if event.image %}{{ request.scheme }}://{{ request.get_host }}{{ event.image.url }}{% else %}{{ request.scheme }}://{{ request.get_host }}{% static 'img/og-default.jpg' %}{% endif %}{% endblock %}
 
 {% block content %}
 <div class="container-limited">
