--- a/IESA_ROOT/gallery/templates/gallery/gallery.html
+++ b/IESA_ROOT/gallery/templates/gallery/gallery.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Gallery | IESA_ROOT{% endblock %}
+{% block title %}Gallery | IESA{% endblock %}
 
 {% block content %}
 <h1 class="fw-bold mb-4 text-center">Photo gallery</h1>
