--- a/IESA_ROOT/products/templates/products/product_list.html
+++ b/IESA_ROOT/products/templates/products/product_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Product Catalog | IESA_ROOT{% endblock %}
+{% block title %}Product Catalog | IESA{% endblock %}
 
 {% block content %}
 <div class="container-limited">
