--- a/IESA_ROOT/users/templates/users/activity_levels_info.html
+++ b/IESA_ROOT/users/templates/users/activity_levels_info.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Activity Levels | IESA_ROOT{% endblock %}
+{% block title %}Activity Levels | IESA{% endblock %}
 
 {% block content %}
 <div class="container-limited py-5">
