--- a/IESA_ROOT/users/templates/users/profile_edit.html
+++ b/IESA_ROOT/users/templates/users/profile_edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Edit profile | IESA_ROOT{% endblock %}
+{% block title %}Edit profile | IESA{% endblock %}
 
 {% block content %}
 <div class="container-limited">
