--- a/IESA_ROOT/users/templates/users/register.html
+++ b/IESA_ROOT/users/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Register | IESA_ROOT{% endblock %}
+{% block title %}Register | IESA{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center py-5">
