--- a/IESA_ROOT/users/templates/users/search_results.html
+++ b/IESA_ROOT/users/templates/users/search_results.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}User search — IESA_ROOT{% endblock %}
+{% block title %}User search — IESA{% endblock %}
 
 {% block content %}
 <div class="container-limited">
