--- a/IESA_ROOT/notifications/templates/notifications/notification_list.html
+++ b/IESA_ROOT/notifications/templates/notifications/notification_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Notifications | IESA_ROOT{% endblock %}
+{% block title %}Notifications | IESA{% endblock %}
 
 {% block content %}
 <div class="container-limited">
