--- a/IESA_ROOT/users/templates/users/login.html
+++ b/IESA_ROOT/users/templates/users/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sign In | IESA_ROOT{% endblock %}
+{% block title %}Sign In | IESA{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center py-5">
